# project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/stb/: stb_font_consolas_24_latin1.inl
lib/: libfmt.so.4  libfmt.so.4.0.0  libvulkan.so.1  libvulkan.so.1.0.42
